# CorrodeCord

./: README.md  pubspec.yaml
.github/workflows/: android.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/pages/: events_page.dart  login_page.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: main.dart
lib/utils/: rust_service.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: main.rs  mod.rs  simple.rs
rust/src/api/discord_api/: Cargo.toml
rust/src/api/discord_api/src/: lib.rs
rust/src/api/discord_api/src/events/: event.rs  handler.rs
rust/src/api/discord_api/src/gateway/: connection.rs
rust/src/api/discord_api/src/rest/: client.rs  endpoints.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_disproportion.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_disproportion.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+2 files in other folders)
