workspace = { members = ["src/api/discord_api/"] }
[package]
name = "rust_lib_Corrode"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.4.0"
discord_api = { path = "src/api/discord_api" }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0.80"
