[package]
name = "discord_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.0", features = ["native-tls"] }
serde = "1.0.197"
serde_json = "1.0.115"
chrono = "0.4.37"
reqwest = { version = "0.12.3", features = ["json"] }
futures-util = "0.3.30"
url = "2.5.0"
eetf = "0.9.0"
tungstenite = "0.23.0"